fix ATC word wrap in catalog

--- a/src/storefront/src/styles/_settings.less
+++ b/src/storefront/src/styles/_settings.less
@@ -35,13 +35,14 @@
 @color-green:                                   #3a913f;
 @color-blue:                                    #00758f;
 @color-orange:                                  #DE6C0A;
+@color-burgundy:                                #942645;
 // redwood
 @color-red:                                     #c54a39;
 @color-green:                                   #6b8f63;
 @color-blue:                                    #2C5968;
 @color-orange:                                  #e3a665;
+@color-burgundy:                                #7a3c4b;
 // rest
-@color-burgundy:                                #942645;
 @color-slate:                                   #8aadbf;
 @color-grey:                                    #939699;
 @color-highlight:                                 @color-orange;
