--- a/src/storefront/src/styles/shop.less
+++ b/src/storefront/src/styles/shop.less
@@ -685,6 +685,7 @@ li.mu-product-slider-item {
   border-radius: 500px;
   justify-content: center;
   align-items: center;
+  white-space: nowrap;
 }
 
 .tm-product-card-add-button-text {
